--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,12 @@
+APP_PORT="8080"
+
 POSTGRES_DB="db"
+POSTGRES_HOST="localhost"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="postgres"
+POSTGRES_PORT=5432
+POSTGRES_LOGGING=true
+POSTGRES_SYNCHRONIZE=synchronize
 
 PGADMIN_DEFAULT_EMAIL="test@gmail.com"
 PGADMIN_DEFAULT_PASSWORD="test"
