Modify migrations configurations

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 APP_PORT="8080"
 
-POSTGRES_DB="postgres-test"
+POSTGRES_DB="postgres-stg"
 POSTGRES_HOST="localhost"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="postgres"
