--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/tests/test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "npm run typeorm migration:run -- -d ./typeorm-cli.config.ts && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -17,7 +17,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config src/tests/test/jest-e2e.json",
+    "test:e2e": "jest --config src/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
     "migration:cache": "npm run typeorm -- -d cache:clear",
     "migration:info": "npm run typeorm migration:show -- -d ./typeorm-cli.config.ts",
