--- a/.env.staging
+++ b/.env.staging
@@ -5,8 +5,7 @@ POSTGRES_HOST="localhost"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="postgres"
 POSTGRES_PORT=5432
-POSTGRES_LOGGING=true
-POSTGRES_SYNCHRONIZE=synchronize
+POSTGRES_LOGGING=false
 
 PGADMIN_DEFAULT_EMAIL="test@gmail.com"
 PGADMIN_DEFAULT_PASSWORD="test"
